--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
-    "web-vitals": "^0.2.4"
+    "web-vitals": "^0.2.4",
+    "mysql": "^2.18.1"
   },
   "main": "app/main.js",
   "scripts": {
@@ -82,9 +83,9 @@
       "node_modules/**/*",
       "public/*",
       {
-        "from":"src",
-        "to":"build",
-        "filter":"**/*"
+        "from": "src",
+        "to": "build",
+        "filter": "**/*"
       }
     ]
   }
