--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.2.2",
+    "fs": "^0.0.1-security",
     "gulp-cli": "^2.3.0",
     "gulp-livereload": "^4.0.2",
     "mysql": "^2.18.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "^1.1.5",
+    "vinyl-fs": "^3.0.3",
     "web-vitals": "^0.2.4"
   },
   "main": "app/main.js",
@@ -62,7 +64,7 @@
     "electron": "^11.0.3",
     "electron-builder": "^22.9.1",
     "electron-packager": "^15.1.0",
-    "gulp": "^3.9.1",
+    "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0",
     "gulp-clean-css": "^4.3.0",
     "gulp-concat": "^2.6.1"
